# OpenXR-OverlayLayer

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  overlay_state.cpp
OverlayUser_Host/: CMakeLists.txt  ovelay_host.cpp
OverlayUser_Remote/: CMakeLists.txt  overlay_remote.cpp  remote_openxr.cpp  unimplemented.cpp
XR_overlay_ext/: CMakeLists.txt  XR_EXT_overlay_api_layer.json  XrApiLayer_Overlay.json  xr_layer_interface.cpp  xr_overlay_dll.cpp  xr_overlay_dll.h
api-layer/: CMakeLists.txt  README.md  adjusted_ref_space.cpp  adjusted_ref_space.h  api_layer_platform_defines.h  generate.py  generate_overlays_apilayer.py  generate_placeholder_actions.py  hex_and_handles.h  notes  overlays.cpp  overlays.h  overlays_generator.py  xr_extx_overlay.json
external_headers/: filesystem_utils.cpp  filesystem_utils.hpp  loader_interfaces.h  platform_utils.hpp  xr_dependencies.h  xr_generated_dispatch_table.c  xr_generated_dispatch_table.h  xr_linear.h
external_headers/openxr/: openxr.h  openxr_platform.h  openxr_platform_defines.h
include/: util.h
overlay-sample/: CMakeLists.txt  FindFreeImagePlus.cmake  README.md  overlay_sample.cpp
